changes images and text

--- a/webappp/index.html
+++ b/webappp/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="boltex">
     <!-- keywords -->
     <meta name="keywords" content="">
-        <title>Nextme</title>
+        <title>Mena-Tech</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -24,7 +24,7 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg fixed-top activate-menu navbar-light bg-light">
-    <a class="navbar-brand" href="#">Nextme</a>
+    <a class="navbar-brand" href="#">Mena-Tech</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,15 +63,14 @@
   <div id="showcase">
     <div class="container showcase">
         <div class="full-width text-center showcase-caption mt-30">
-    			<h4>We Are Creative</h4>
-              <h1>Creative Digital Agency</h1>
-                  <p>A single place to share, curate and discover visual that tells a story.</p>
+              <h1>Mena - Tech</h1>
+    			      <h4>One stop solution for all your security needs</h4>
+                  <p>At Mena-Tech we aim to protect your property with the most efficient and effective security solutions with a 24-hour response. We make it our duty to provide the best alarm system specifically tailored to each individual customer’s design or cost requirements, together with a professional and friendly service.
+                  Your property and contents are worth far more than your insurance can possibly pay-out, and in reality, nothing can really make up for the intrusion into your privacy.</p>
+                    
                     <div class="showcase-button">
-                      <a href="#features" class="button-style showcase-btn">
-                        Learn More
-                      </a>
-                      <a href="#services" class="button-style showcase-btn">
-                        Get Started
+                      <a href="#contact" class="button-style showcase-btn">
+                        Get a Free Quote
                       </a>
                 </div>
     		</div>
@@ -81,10 +80,10 @@
   <!--================== Features section =====================-->
   <div id="features">
      <div class="text-center features-caption features">
-                <h3>Welcome To Our Agency</h3>
-                  <h4>Who We Are And What Can We do?</h4>
+                <h3>Welcome To Mena-Tech</h3>
+                  <h4>Have you taken steps to protect your assets?</h4>
                   <p>
-                    We’re full service which means we’ve got you covered on design and content right through to digital. You’ll form a lasting relationship with us, collaboration is central to everything we do. We’ll push you out of your comfort zone from time-to-time, but this is where you’ll shine. Bottom line is we want you to succeed at Faculty.
+                    Having your property fully protected gives you peace of mind whilst at home or away and will help you and your family sleep better at night. Thieves can strike at any time, so why leave it to chance?
                   </p>
      </div>
           <div class="container">
@@ -697,8 +696,8 @@
                       <div class="date"><span class="day">17</span><span class="month">Nov</span></div>
                     </div>
                     <figcaption>
-                      <h3>The World Ended Yesterday</h3>
-                      <p>I don't know which is worse, ...that everyone has his price, or that the price is always so low.</p>
+                      <h3>High Speed Doors</h3>
+                      <p>CC Security supply and install a range of high speed doors. These  doors are suitable in the most diverse environments, where they ensure safety and efficiency in industrial scenarios. The flexible curtain’s modular system, which can be quickly folded or rolled up, is a major feature. The curtains are available in fully see-through PVC or in a wide range of colours to improve safety at work to allow quick and easy access.</p>
                       <a href="#" class="read-more">Read More</a>
                     </figcaption>
                   </figure>
@@ -714,8 +713,8 @@
                         <span class="month">Nov</span></div>
                     </div>
                     <figcaption>
-                      <h3>Sample Article Heading</h3>
-                      <p>My family is dysfunctional and my parents won't empower me. Consequently I'm not self actualized.</p>
+                      <h3>Fire Shutters</h3>
+                      <p>All fire shutter products contain fire in an area of a building for 1, 2 or 4 hours. The addition of an interface panel allows them to be integrated into an alarm system for an automatic response in the event of an emergency. They are therefore commonly used in applications such as canteens and schools.  Find out more about the different types of security shutters or contact the CC Security team for more information.</p>
                       <a href="#" class="read-more">Read More</a>
                     </figcaption>
                   </figure>
@@ -730,8 +729,8 @@
                       <div class="date"><span class="day">26</span><span class="month">Nov</span></div>
                     </div>
                     <figcaption>
-                      <h3>Another Sample Heading</h3>
-                      <p>You know what we need, Hobbes? We need an attitude. Yeah, you can't be cool if you don't have an attitude.</p>
+                      <h3>Security Grills</h3>
+                      <p>Security grilles provide an effective barrier which maximises natural light. Innovative designs and modern manufacturing techniques have led to the development of manually retractable sliding security grilles for domestic, commercial and public properties. They are an excellent way to retain the appearance of a building whilst still providing a deterrent to intruders.</p>
                       <a href="#" class="read-more">Read More</a>
                     </figcaption>
                   </figure>
